--- a/FRONTEND/src/app/book-ticket/book-ticket.component.html
+++ b/FRONTEND/src/app/book-ticket/book-ticket.component.html
@@ -1,1 +1,89 @@
-<p>book-ticket works!</p>
+<div class="container mt-4">
+  <div class="row">
+<div class="col-md-6">
+<div >
+  <div  *ngIf="movies">
+   
+    <div class="card p-100 d-flex flex-column" widhth="400px">
+      <img [src]="movies.image" class="card-img-top " alt="movies Image" height="250px">
+      <div class="card-body">
+        <h5 class="card-title">{{ movies.movieName }}</h5>
+        <p class="card-text">Theatre : {{ movies.theatreName }}</p>
+        <p class="card-text">Total : {{movies.totalSeats}}</p>
+        <p class="card-text">Available : {{movies.availableTickets}}</p>
+        <p class="card-text">Price : ₹ {{movies.price}}</p>
+        <button class="btn btn-primary" (click)="openForm()">Book Now</button>
+      </div>
+      
+    </div>
+  </div>
+</div> 
+</div>
+
+<!-- Button to trigger modal -->
+
+
+
+<!-- The Modal -->
+<div class="col-md-6">
+
+
+<div  class="modal" [ngClass]="{'show-modal': showModal}">
+
+  <div class="modal-content">
+
+    <span class="close" (click)="closeForm()">&times;</span>
+
+    <h2>Book Your Tickets</h2>
+
+    <!-- Booking Form -->
+
+    <form (ngSubmit)="submitForm()">
+
+      <div>
+
+        <label for="movieName">Movie Name:</label>
+
+        <input type="text" id="movieName"  class="form-control" [(ngModel)]="movies.movieName" name="movieName" required>
+
+      </div>
+
+      <div>
+
+        <label for="theatreName">Theatre Name:</label>
+
+
+        <input type="text" id="theatreName" class="form-control" [(ngModel)]="movies.theatreName" name="theatreName" required>
+
+      </div>
+
+      <div>
+
+        <label for="selectedSeats">Number of Tickets:</label>
+
+        <input type="number" id="selectedSeats" class="form-control" [(ngModel)]="formData.numberOfTickets" name="numberOfTickets" required>
+
+      </div>
+
+      <div>
+
+        <label for="selectedSeats">Seat Numbers</label>
+
+        <input type="number" id="selectedSeats" class="form-control" [(ngModel)]="formData.seatNumbers" name="seatNumbers" required>
+
+      </div>
+
+      <button type="submit" class="btn btn-success mt-3">Book Tickets</button>
+
+    </form>
+
+  </div>
+
+</div>
+
+
+
+</div>
+</div>
+
+</div>
