--- a/FRONTEND/src/app/movies/movies.component.html
+++ b/FRONTEND/src/app/movies/movies.component.html
@@ -1,26 +1,70 @@
-<div class="fluid-container">
-    <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let movie of movies;">
+<!-- <div class="fluid-container">
+   
+        <div  *ngFor="let movie of movies;">
     
-            <div class="card"  style="width: 14rem;" >
-                <img [src]="movie.image" class="card-img-top"  width="200px"  height="200px" >
-                <div class="card-body">
-                  <h5 class="card-title">{{ movie.movieName }}</h5>
-                   <div>
-                    <p class="card-text" style="height:12rem"> {{movie.theatreName}} </p>
-                   
-                    
+            <div class="row justify-content-center mb-4"  style="width: 14rem;" >
+              <div class="col-12 col-md-8">
+                <img [src]="movie.image" class="img-fluid rounded shadow "  width="200px"  height="200px" />
 
-                  
-                  <p class="card-text">Price: {{ movie.price  }}</p>
-                  <p class="card-text">Quantity: {{ movie.status }}</p> 
-                  <!-- <p class="btn btn-primary" (click)="addItemToCart(movie)">Add To Cart</p> -->
-                </div>
               </div>
-    
+             </div> 
+               
+                <div class="row">
+                  <div class="col-12 text-centre">
+                    <h5 >{{ movie.movieName }}</h5>
+                    <p class="text-muted"> Book your tickets</p>
+                    <hr/>
+                  </div>
+                  </div>
+
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10">
+
+        
+                  
+                  <div class="table-responsive">
+                 
+             
+                      <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th>Theatre Name</th>
+                            <th>Total Tickets</th>
+                            <th>Available Tickets</th>
+                            <th>Status</th>
+                            <th>Price</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>{{ movie.theatreName }}</td>
+                            <td>{{ movie.totalSeats }}</td>
+                            <td>{{ movie.availabletickets }}</td>
+                            <td>  ₹ {{ movie.price }}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+              
+                </div> 
     </div>
+
     </div>
-    </div>
+    </div> -->
+  
+    <div class="row">
+  
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 pb-3 pt-5" *ngFor="let movie of movies">
+       
+        <div class="card p-100 d-flex flex-column" height="550px" style="width: 18rem; border-radius: 3px; margin: 5%;">
+          <img [src]="movie.image" class="card-img-top" (click)="bookTicket(movie.movieName)" alt="movie Image" height="530px" width="25px" >
+            <h5 class="card-title" style="text-align: center;">{{ movie.movieName }}</h5>
+          </div>
+          
+        </div>
+      </div>
+ 
+ 
 
 
 <!-- <div class="container mt-5">
@@ -104,9 +148,9 @@
   </div> -->
 
   <!-- View Ticket Button -->
-<button class="btn btn-info" data-toggle="modal" data-target="#viewTicketModal">
+<!-- <button class="btn btn-info" data-toggle="modal" data-target="#viewTicketModal">
     View Ticket
-  </button>
+  </button> -->
   
   <!-- View Ticket Modal -->
  
