--- a/FRONTEND/src/app/header/header.component.html
+++ b/FRONTEND/src/app/header/header.component.html
@@ -14,7 +14,7 @@
     @if(!isUser){
   
     <li class="nav-item">
-      <a class="nav-link text-light" routerLinkActive="Active" routerLink="add-article">ADD ARTICLE</a>
+      <a class="nav-link text-light" routerLinkActive="Active" routerLink="addMovie">Add Movie</a>
     </li>
     }
   
