--- a/FRONTEND/src/app/app.component.html
+++ b/FRONTEND/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <app-header/>
 
-<div style="height:500px">
-
-
-  <router-outlet></router-outlet>
-  </div>
+  <div class="main-content" style="min-height: calc(100vh - 80px);"> <!-- Adjust height based on your footer -->
+    <router-outlet></router-outlet>
+</div>
+  <app-footer></app-footer>
+  
