--- a/FRONTEND/src/app/movies/movies.component.html
+++ b/FRONTEND/src/app/movies/movies.component.html
@@ -1,146 +1,111 @@
-<div class="fluid-container">
-    <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let movie of movies;">
-    
-            <div class="card"  style="width: 14rem;" >
-                <img [src]="movie.image" class="card-img-top"  width="200px"  height="200px" >
-                <div class="card-body">
+<!-- <div class="fluid-container">
+  <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-12 mb-4" *ngFor="let movie of movies;">
+          <div class="card h-100">
+              <img [src]="movie.image" class="card-img-top" alt="{{ movie.movieName }}" style="height: 200px; object-fit: cover;">
+              <div class="card-body">
                   <h5 class="card-title">{{ movie.movieName }}</h5>
-                   <div>
-                    <p class="card-text" style="height:12rem"> {{movie.theatreName}} </p>
-                   
-                    
-
-                  
-                  <p class="card-text">Price: {{ movie.price  }}</p>
-                  <p class="card-text">Quantity: {{ movie.status }}</p> 
-                  <!-- <p class="btn btn-primary" (click)="addItemToCart(movie)">Add To Cart</p> -->
-                </div>
+                  <p class="card-text" style="height: 3rem;">{{ movie.theatreName }}</p>
+                  <p class="card-text">Price: ₹{{ movie.price }}</p>
+                  <p class="card-text">Status: {{ movie.status }}</p>
+                  <button class="btn btn-outline-dark" (click)="addItemToCart(movie)">Add To Cart</button>
               </div>
-    
-    </div>
-    </div>
-    </div>
-
-
-<!-- <div class="container mt-5">
-    <div class="row">
-       Movie Poster 
-      <div class="col-md-3"  *ngfor="let movie of movies">
-        <img src="{{ movie.image }}" alt="Movie Poster" class="img-fluid">
-      </div>
-      
-     Movie Info 
-      <div class="col-md-9" *ngfor="let movie of movies">
-        <h2>{{ movie.movieName }}</h2>
-      
-        
-        
-        
-        Book Tickets Button 
-        <button class="btn btn-outline-dark p" data-toggle="modal" data-target="#bookTicketModal">
-            Book Ticket
-          </button>
-    
-     Movie Showtimes 
-    <div class="row mt-5">
-      <div class="col-md-12">
-        <h3>Details:</h3>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Theatre</th>
-              <th>Available Tickets</th>
-              <th>Total Tickets</th>
-              <th>Status</th>
-              <th>Price</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>{{ movie.theatreName }}</td>
-              <td>{{ movie.availabletickets }}</td>
-              <td>{{ movie.totalSeats }}</td>
-              <td>  ₹ {{ movie.price }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div> 
-
-   Book Ticket Button -->
-
-  
-  <!-- Book Ticket Modal -->
-  <!--  <div class="modal fade" id="bookTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Book Ticket</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <img src="https://static.vecteezy.com/system/resources/previews/035/227/664/non_2x/cinema-seats-booking-online-ui-design-scheme-or-film-theatre-places-reservation-template-layout-flat-cartoon-violet-dark-illustration-image-vector.jpg" alt="Movie Poster" class="img-fluid">
-          
-            <div>
-              <label for="ticketQuantity">Number of Tickets:</label>
-              <input type="number" id="ticketQuantity"  [(ngModel)]="ticketQuantity">
-            </div>
-            <div>
-                <label for="selectedSeats">Seat Numbers:</label>
-                <input type="text" id="selectedSeats"  [(ngModel)]="selectedSeats">
-              </div>
-          
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-outline-dark p" (click)="bookTickets(movies.title,movies.theatre)">Book Tickets</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- View Ticket Button -->
-<button class="btn btn-info" data-toggle="modal" data-target="#viewTicketModal">
-    View Ticket
-  </button>
-  
-  <!-- View Ticket Modal -->
- 
-  <!-- <div class="modal fade" id="viewTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Ticket Details</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-md-6">
-              <h6>Ticket Information:</h6>
-              
-              <p><strong>Movie:</strong> {{ ticket.title }}</p>
-              <p><strong>Show Date:</strong> {{ ticket.showDate }}</p>
-             
-            </div>
-            <div class="col-md-6">
-              <h6>Seat Information:</h6>
-              <p><strong>Seat Number:</strong> {{ ticket.seatNum}}</p>
-              <p><strong>Total Seats:</strong> {{ ticket.seats }}</p>
-              <p><strong>Price:</strong> {{calculatePrice(ticket.seats,movies.price)}}</p>
-            </div>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
       </div>
-    </div>
-  </div> 
--->
-   
+  </div>
+</div> -->
+
+<!-- Movie Details Section -->
+<!-- <div class="container mt-5">
+  <div class="row">
+      <div class="col-md-12">
+          <h2>Movie Details</h2>
+          <table class="table table-striped">
+              <thead>
+                  <tr>
+                      <th>Theatre</th>
+                      <th>Available Tickets</th>
+                      <th>Total Tickets</th>
+                      <th>Status</th>
+                      <th>Price</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr *ngFor="let movie of movies">
+                      <td>{{ movie.theatreName }}</td>
+                      <td>{{ movie.availableTickets }}</td>
+                      <td>{{ movie.totalSeats }}</td>
+                      <td>{{ movie.status }}</td>
+                      <td>₹{{ movie.price }}</td>
+                  </tr>
+              </tbody>
+          </table>
+      </div>
+  </div>
+</div> -->
+
+<!-- Book Ticket Modal -->
+<!-- <div class="modal fade" id="bookTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Book Ticket</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <img src="https://static.vecteezy.com/system/resources/previews/035/227/664/non_2x/cinema-seats-booking-online-ui-design-scheme-or-film-theatre-places-reservation-template-layout-flat-cartoon-violet-dark-illustration-image-vector.jpg" alt="Booking" class="img-fluid mb-3">
+              <div class="form-group">
+                  <label for="ticketQuantity">Number of Tickets:</label>
+                  <input type="number" id="ticketQuantity" [(ngModel)]="ticketQuantity" class="form-control">
+              </div>
+              <div class="form-group">
+                  <label for="selectedSeats">Seat Numbers:</label>
+                  <input type="text" id="selectedSeats" [(ngModel)]="selectedSeats" class="form-control">
+              </div>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-outline-dark" (click)="bookTickets(movie.title, movie.theatre)">Book Tickets</button>
+          </div>
+      </div>
+  </div>
+</div> -->
+
+<!-- View Ticket Button -->
+<!-- <button class="btn btn-info" data-toggle="modal" data-target="#viewTicketModal">
+  View Ticket
+</button> -->
+
+<!-- View Ticket Modal -->
+<!-- <div class="modal fade" id="viewTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Ticket Details</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <div class="row">
+                  <div class="col-md-6">
+                      <h6>Ticket Information:</h6>
+                      <p><strong>Movie:</strong> {{ ticket.title }}</p>
+                      <p><strong>Show Date:</strong> {{ ticket.showDate }}</p>
+                  </div>
+                  <div class="col-md-6">
+                      <h6>Seat Information:</h6>
+                      <p><strong>Seat Number:</strong> {{ ticket.seatNum }}</p>
+                      <p><strong>Total Seats:</strong> {{ ticket.seats }}</p>
+                      <p><strong>Price:</strong> ₹{{ calculatePrice(ticket.seats, movie.price) }}</p>
+                  </div>
+              </div>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+      </div>
+  </div>
+</div> -->
