--- a/FRONTEND/src/app/book-ticket/book-ticket.component.html
+++ b/FRONTEND/src/app/book-ticket/book-ticket.component.html
@@ -1,1 +1,175 @@
-<p>book-ticket works!</p>
+<h1>Ticket Booking</h1>
+<div class="container1">
+  <div class="container">
+    <div class="column1">
+      <form [formGroup]="ticketBookingForm" (ngSubmit)="bookingFunction()">
+        <div [ngClass]="className" role="alert">
+          {{ message }} <a routerLink="/login" style="cursor: pointer;"></a>
+        </div>
+        <p>{{ email }}</p>
+        <h2 class="card-title text-white">Movie: {{ movies.movieName }}</h2>
+        <img [src]="movies.image" class="card-img-top" height="300px" alt="Movie Image"/>
+        
+        <label>Overview:</label><br>
+        <p>{{ movieOverview }}</p>
+        
+        <label>Show Timings:</label><br>
+        <div class="time">09:00 AM</div>
+        <div class="time">12:00 PM</div>
+        <div class="time">04:00 PM</div>
+        <div class="time">10:30 PM</div>
+        <br>
+        <hr>
+        
+        <label>Select a show time:</label>
+        <select formControlName="showTime" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['showTime'].errors}">
+          <option value="09:00 AM">09:00 AM</option>
+          <option value="12:00 PM">12:00 PM</option>
+          <option value="04:00 PM">04:00 PM</option>
+          <option value="10:30 PM">10:30 PM</option>
+        </select><br>
+        <div *ngIf="submitted && ticketBookingForm.controls['showTime'].errors" class="text-danger">
+          <div *ngIf="submitted && ticketBookingForm.controls['showTime'].errors['required']">
+            Select a show timing
+          </div>
+        </div>
+        
+        <label>Number of Tickets:</label>
+        <select formControlName="noOfTickets" (change)="ticketSelectedChange($event)" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['noOfTickets'].errors}">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+        </select><br>
+        <div *ngIf="submitted && ticketBookingForm.controls['noOfTickets'].errors" class="text-danger">
+          <div *ngIf="submitted && ticketBookingForm.controls['noOfTickets'].errors['required']">
+            Choose the number of tickets
+          </div>
+        </div>
+        
+        <label>Ticket Price:</label> <span>$20/Ticket</span><br>
+        <label>Seat Number:</label> <span id="text"></span><br>
+        <label style="color: white; background-color: blue; font-size: 25px; padding: 5px;">
+          Total Ticket Price: $ <b><span id="total" style="font-size: 25px;"></span></b>
+        </label><br>
+        
+        <button class="btn btn-success">Proceed To Pay</button>
+      </form>
+    </div>
+    
+    <div class="column2">
+      <label>Select Seat Number:</label>
+      <ul class="showcase">
+        <li>
+          <div class="seat"></div>
+          <small>Not Selected</small>
+        </li>
+        <li>
+          <div class="seat Selected"></div>
+          <small>Selected</small>
+        </li>
+        <li>
+          <div class="seat Occupied"></div>
+          <small>Already Occupied</small>
+        </li>
+      </ul>
+
+      <div class="seatsContainer">
+        <div class="row">
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat Occupied"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+        </div>
+        <div class="row">
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat Occupied"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+        </div>
+        <div class="row">
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+        </div>
+        <div class="row">
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+        </div>
+        <div class="row">
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+        </div>
+        <div class="row">
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+        </div>
+        <div class="row">
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+          <div class="seat"></div>
+        </div>
+        <label>You have selected <span id="countS" style="color: antiquewhite; background-color: brown; font-size: 30px;"></span> Seats</label>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- 
+<link rel="stylesheet" href="styles.css"> -->
