minor changes in book ticket

--- a/FRONTEND/src/app/book-ticket/book-ticket.component.html
+++ b/FRONTEND/src/app/book-ticket/book-ticket.component.html
@@ -138,10 +138,10 @@
                 Choose no. of tickets
             </div>
          </div>
-        <label>Ticket Price: </label><span>$20/Ticket</span><br>
+        <label>Ticket Price: </label><span>₹ {{movies.price}}/Ticket</span><br>
         <label>Seat Number: </label><span id="text"></span><br>
        
-        <label style="color: white; background-color: blue; font-size: 25px; padding: 5px;">Total Ticket Price: $ <b><span id="total" style="font-size: 25px;"></span></b></label><br> 
+        <label style="color: white; background-color: rgb(12, 136, 119); font-size: 25px; padding: 5px;">Total Ticket Price: ₹<b><span id="total" style="font-size: 25px;"></span></b></label><br> 
         
     
         <button class="btn btn-success">Proceed To Pay</button>
