--- a/FRONTEND/src/app/add-movie/add-movie.component.html
+++ b/FRONTEND/src/app/add-movie/add-movie.component.html
@@ -1,10 +1,5 @@
 
-  <p class="d-inline-flex gap-1" >
-    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Add Movies</a>
-  </p>
-  <div class="row">
-    <div class="col">
-      <div class="collapse multi-collapse" id="multiCollapseExample1">
+ 
         <div class="lead container">
           
     <form class="mx-auto" [formGroup]="movie" (ngSubmit)="submit()" #ref="ngForm">
@@ -83,10 +78,8 @@
         
         
         </form>
-        </div>
-      </div>
-    </div>
-    <div class="col">
+       
+    <!-- <div class="col">
       <div class="collapse multi-collapse" id="multiCollapseExample2">
         <div>
             <p class="text-center h1 mt-5 pb-3">Enter The Booked Tickets</p>
@@ -105,10 +98,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-  <div class="row">
+  <!-- <div class="row">
   
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 pb-3 pt-5" *ngFor="let movie of movies">
      
@@ -127,8 +120,10 @@
         </div>
         
       </div>
-    </div>
+    </div> -->
 
+    
+  
 
     
 
