--- a/FRONTEND/src/app/app.component.html
+++ b/FRONTEND/src/app/app.component.html
@@ -2,8 +2,9 @@
 
 <app-header/>
 
-  <div class="main-content" style="min-height: calc(100vh - 80px);"> <!-- Adjust height based on your footer -->
+  <div class="main-content" > <!-- Adjust height based on your footer -->
     <router-outlet></router-outlet>
+    <ng-toast></ng-toast>
 </div>
   
   
