--- a/FRONTEND/src/app/header/header.component.css
+++ b/FRONTEND/src/app/header/header.component.css
@@ -1,21 +1,21 @@
 ul{
     background-color:#29d4b7;
+    margin-bottom: 10px;
 
     
 }
-
-
-
 
 a:hover{
-    color:rgb(175, 30, 54);
+    color:#29d4b7;
+    
+    background-color:black;
     
     
 }
-.nav-link:hover{
+/* .nav-link:hover{
     color: rgb(170, 46, 56);
     
-}
+} */
 
 a{
     color:black;
