--- a/FRONTEND/src/app/book-ticket/book-ticket.component.css
+++ b/FRONTEND/src/app/book-ticket/book-ticket.component.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container1 {
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin: 0 auto;
     padding: 20px;
 }
@@ -24,10 +24,7 @@ body {
     margin-bottom: 10px;
 }
 
-img.card-img-top {
-    border-radius: 8px;
-    margin-bottom: 20px;
-}
+
 
 label {
     font-weight: bold;
