--- a/FRONTEND/src/app/login/login.component.html
+++ b/FRONTEND/src/app/login/login.component.html
@@ -33,8 +33,8 @@
         </div>
       </div>
   
-      <button class="btn mt-2 d-block mx-auto">Login</button>
-      <p class="text-center  text-dark h6">Don't have an account?<a routerLink="/register">Register</a></p>
+      <button class="btn mt-2 d-block mx-auto mt-3 mb-4">Login</button>
+      <p class="text-center  text-dark h6">Don't have an account?<a class="register" routerLink="/register">Register</a></p>
     </div>
     </form>
 </div>
