--- a/FRONTEND/src/app/movies/movies.component.html
+++ b/FRONTEND/src/app/movies/movies.component.html
@@ -1,64 +1,27 @@
-<!-- <div class="fluid-container">
-   
-        <div  *ngFor="let movie of movies;">
-    
-            <div class="row justify-content-center mb-4"  style="width: 14rem;" >
-              <div class="col-12 col-md-8">
-                <img [src]="movie.image" class="img-fluid rounded shadow "  width="200px"  height="200px" />
-
-              </div>
-             </div> 
-               
-                <div class="row">
-                  <div class="col-12 text-centre">
-                    <h5 >{{ movie.movieName }}</h5>
-                    <p class="text-muted"> Book your tickets</p>
-                    <hr/>
-                  </div>
-                  </div>
-
-        <div class="row justify-content-center">
-          <div class="col-12 col-md-10">
-
-        
-                  
-                  <div class="table-responsive">
-                 
-             
-                      <table class="table table-hover">
-                        <thead>
-                          <tr>
-                            <th>Theatre Name</th>
-                            <th>Total Tickets</th>
-                            <th>Available Tickets</th>
-                            <th>Status</th>
-                            <th>Price</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td>{{ movie.theatreName }}</td>
-                            <td>{{ movie.totalSeats }}</td>
-                            <td>{{ movie.availabletickets }}</td>
-                            <td>  ₹ {{ movie.price }}</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-              
-                </div> 
-    </div>
-
-    </div>
-    </div> -->
   
     <div class="row">
   
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 pb-3 pt-5" *ngFor="let movie of movies">
        
-        <div class="card p-100 d-flex flex-column" height="550px" style="width: 18rem; border-radius: 3px; margin: 5%;">
-          <img [src]="movie.image" class="card-img-top" (click)="bookTicket(movie.movieName)" alt="movie Image" height="530px" width="25px" >
-            <h5 class="card-title" style="text-align: center;">{{ movie.movieName }}</h5>
+        <div class="card p-100 d-flex flex-column" height="500px" style="width: 18rem; border-radius: 3px; margin: 5%;">
+            @if(status===true){
+              <img [src]="movie.image" class="card-img-top"  alt="movie Image" height="530px" width="25px" >
+            <h5 class="card-title mt-2" style="text-align:center;">{{ movie.movieName }}</h5>
+              
+              @if(!isUser){
+                <button class="my-2" (click)="bookTicket(movie.movieName)">Update Status</button>
+    
+               }@else{
+                <button class="my-2" (click)="bookTicket(movie.movieName)">Book Now</button>
+
+               }
+
+            }@else{
+              <img [src]="movie.image" class="card-img-top" (click)="login()" alt="movie Image" height="530px" width="25px" >
+            <h5 class="card-title mt-2" style="text-align:center;">{{ movie.movieName }}</h5>
+            }
+         
+
             
           </div>
           
@@ -68,109 +31,3 @@
  
 
 
-<!-- Movie Details Section -->
-<!-- <div class="container mt-5">
-  <div class="row">
-      <div class="col-md-12">
-          <h2>Movie Details</h2>
-          <table class="table table-striped">
-              <thead>
-                  <tr>
-                      <th>Theatre</th>
-                      <th>Available Tickets</th>
-                      <th>Total Tickets</th>
-                      <th>Status</th>
-                      <th>Price</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr *ngFor="let movie of movies">
-                      <td>{{ movie.theatreName }}</td>
-                      <td>{{ movie.availableTickets }}</td>
-                      <td>{{ movie.totalSeats }}</td>
-                      <td>{{ movie.status }}</td>
-                      <td>₹{{ movie.price }}</td>
-                  </tr>
-              </tbody>
-          </table>
-      </div>
-  </div>
-</div> -->
-
-<!-- Book Ticket Modal -->
-<!-- <div class="modal fade" id="bookTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title">Book Ticket</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-              </button>
-          </div>
-          <div class="modal-body">
-              <img src="https://static.vecteezy.com/system/resources/previews/035/227/664/non_2x/cinema-seats-booking-online-ui-design-scheme-or-film-theatre-places-reservation-template-layout-flat-cartoon-violet-dark-illustration-image-vector.jpg" alt="Booking" class="img-fluid mb-3">
-              <div class="form-group">
-                  <label for="ticketQuantity">Number of Tickets:</label>
-                  <input type="number" id="ticketQuantity" [(ngModel)]="ticketQuantity" class="form-control">
-              </div>
-              <div class="form-group">
-                  <label for="selectedSeats">Seat Numbers:</label>
-                  <input type="text" id="selectedSeats" [(ngModel)]="selectedSeats" class="form-control">
-              </div>
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-outline-dark" (click)="bookTickets(movie.title, movie.theatre)">Book Tickets</button>
-          </div>
-      </div>
-  </div>
-</div> -->
-
-<!-- View Ticket Button -->
-<!-- <button class="btn btn-info" data-toggle="modal" data-target="#viewTicketModal">
-  View Ticket
-</button> -->
-
-<<<<<<< HEAD
-  <!-- View Ticket Button -->
-<!-- <button class="btn btn-info" data-toggle="modal" data-target="#viewTicketModal">
-    View Ticket
-  </button> -->
-  
-  <!-- View Ticket Modal -->
- 
-  <!-- <div class="modal fade" id="viewTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-=======
-<!-- View Ticket Modal -->
-<!-- <div class="modal fade" id="viewTicketModal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
->>>>>>> 081533256cbc2c780038c4a08d7512517506897e
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title">Ticket Details</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-              </button>
-          </div>
-          <div class="modal-body">
-              <div class="row">
-                  <div class="col-md-6">
-                      <h6>Ticket Information:</h6>
-                      <p><strong>Movie:</strong> {{ ticket.title }}</p>
-                      <p><strong>Show Date:</strong> {{ ticket.showDate }}</p>
-                  </div>
-                  <div class="col-md-6">
-                      <h6>Seat Information:</h6>
-                      <p><strong>Seat Number:</strong> {{ ticket.seatNum }}</p>
-                      <p><strong>Total Seats:</strong> {{ ticket.seats }}</p>
-                      <p><strong>Price:</strong> ₹{{ calculatePrice(ticket.seats, movie.price) }}</p>
-                  </div>
-              </div>
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
-      </div>
-  </div>
-</div> -->
