--- a/FRONTEND/src/app/header/header.component.html
+++ b/FRONTEND/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<ul class="nav fixed-top navbar-expand-sm justify content-end p-2 mb-5">
+<ul class="nav fixed-top navbar-expand-sm justify-content-end p-2 mb-5">
     @if(status===false){
     <li class="nav-item">
-      <a class="nav-link  " aria-current="page" routerLinkActive="Active" routerLink="home">HOME</a>
+      <a class="nav-link  " aria-current="page" routerLinkActive="Active" routerLink="movies">MOVIES</a>
     </li>
     <li class="nav-item">
       <a class="nav-link " routerLinkActive="Active" routerLink="register">REGISTER</a>
@@ -11,19 +11,19 @@
     </li>
     }
     @else{
-    @if(!isUser){
-  
+
+      @if(!isUser){
+        <li class="nav-item">
+          <a class="nav-link " routerLinkActive="Active" routerLink="addMovie"
+            >ADD MOVIE</a>
+        </li>
+      }
+
     <li class="nav-item">
       <a class="nav-link " routerLinkActive="Active" routerLink="movies"
-        >Movies</a>
+        >MOVIES</a>
     </li>
 
-    }
-
-    <li class="nav-item">
-      <a class="nav-link " routerLinkActive="Active" routerLink="movies"
-        >Movies</a>
-    </li>
 
 
   
